--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-template-jasmine-istanbul": "^0.4.0"
   },
