--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-uglify": "^0.6.0",
-    "grunt-template-jasmine-istanbul": "^0.4.0"
+    "grunt-template-jasmine-istanbul": "^0.4.0",
+    "jquery": "^2.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
