--- a/package.json
+++ b/package.json
@@ -3,18 +3,9 @@
   "version": "0.0.1",
   "description": "Mines Game",
   "main": "grunt.js",
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jasmine": "^0.8.0",
-    "grunt-jasmine-runner": "^0.6.0"
-  },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-jasmine": "^0.8.2",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-template-jasmine-istanbul": "^0.4.0",
-    "jquery": "^2.2.2"
+    "gulp": "^3.9.1",
+    "gulp-jasmine-browser": "^1.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
