--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
     - "0.10"
-script: gulp test
+script: node_modules/gulp/bin/gulp.js test
+
 before_script:
     - npm install
